tests/snapshots/lists__lists__list_literal_with_strings.snap
---
source: tests/lists.rs
expression: result

---
Unexpected token.

error: 
  ┌─ sample:3:27
  │
3 │   String.join "," ["Hello", " World"]
  │                           ^


